<resources>
    <string name="app_name">Jag\'s Home</string>
    <string name="auto_learn">Auto Learn</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="popupt">What do you want to do?</string>
    <string name="delete">Delete All</string>
    <string name="edit">Edit this</string>
    <string name="Name">Name</string>
    <string name="subID" >Sub ID</string>
    <string name="ID" >ID</string>
</resources>
