<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/kindofgrey"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="86dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877">

        <EditText
            android:id="@+id/tID"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:background="@mipmap/txt"
            android:gravity="center"
            android:hint="@string/ID"
            android:inputType="number"
            android:textColorHint="@color/lgrey"
            android:textSize="32dp"
            app:layout_constraintBottom_toTopOf="@+id/tsID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/tsID"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:background="@mipmap/txt"
            android:gravity="center"
            android:hint="@string/subID"
            android:inputType="number"
            android:textColorHint="@color/lgrey"
            android:textSize="32dp"
            app:layout_constraintBottom_toTopOf="@+id/bAuto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/tName"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:background="@mipmap/txt"
            android:gravity="center"
            android:hint="@string/Name"
            android:textColorHint="@color/lgrey"
            android:textSize="32dp"
            app:layout_constraintBottom_toTopOf="@+id/tID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/bAuto"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:background="@drawable/btn1"
            android:gravity="center"
            android:text="@string/auto_learn"
            android:textColor="@color/lgrey"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/bOk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bOk"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:background="@drawable/btn1"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/lgrey"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/bCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bCancel"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/lgrey"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>